update width height

--- a/05_Day05_FunctionalComponent/Practice/box_generator/src/components/Style_Color.css
+++ b/05_Day05_FunctionalComponent/Practice/box_generator/src/components/Style_Color.css
@@ -5,8 +5,7 @@
     flex-wrap: wrap;
 }
 .color{
-    width:200px;
-    height:200px;
     flex-wrap: wrap;
     display: flex;
+    margin: 2px;
 }
